@@ -129,11 +129,12 @@ public class CoreDescriptor implements Cloneable {
    * 
    * @param coreProperties
    */
-  void setCoreProperties(Properties coreProperties) {
+  public void setCoreProperties(Properties coreProperties) {
     if (this.coreProperties == null) {
       Properties p = initImplicitProperties();
       this.coreProperties = new Properties(p);
-      this.coreProperties.putAll(coreProperties);
+      if(coreProperties != null)
+        this.coreProperties.putAll(coreProperties);
     }
   }
 }
